src/test/custom/valid/include/statementMacro.wacc
define PRINT println "This is a test"

begin
  PRINT
end