src/test/custom/invalid/preCompileSyntaxErr/invalidMacro2.wacc
define a b c

begin
  skip
end